# TotkBits

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  clean_cargo.bat  npm_install.bat  open_installer_dir.bat  package-lock.json  package.json  repo_init.py  tauri_build.py  update_git_libs.bat
egui_deprecated_code/src/: FileReader.rs  GuiMenuBar.rs  GuiScroll.rs  Open_Save.rs  SarcFileLabel.rs  Settings.rs  TotkConfig.rs  Tree.rs  Zstd.rs
egui_deprecated_code/src/egui_code_editor/src/syntax/: rust.rs
egui_deprecated_code/src/file_format/: BinTextFile.rs  TagProduct.rs
egui_deprecated_code/src/ui_elements/: mod.rs
egui_deprecated_code/src/widgets/: mod.rs
ext_projects/bphcl/: Armor_225_Head.bphcl  Armor_225_Head.hkcl  Armor_999_Head.bphcl  Armor_999_Head.yaml  BphclEnums.py  BphclMainDataclasses.py  BphclSmallDataclasses.py  BphclTagFile.py  Cloth.py  DerivedClasses.py  Experimental.py  ExperimentalEX.py  GeneratorPy.py  Havok.py  Numerics.py  Stream.py  aamp_totk_hashes.py  bphcl.hexpat  bphcl.py  totk_botw_all_strings.txt  util.py
ext_projects/bphcl/generator/: GeneratorPy.py  parse_pyclasses.py  parse_structs_derived.py
ext_projects/bphcl/resources/: Experimental.py  bphcl.hexpat  notes.txt  py_classes.json  resources.7z  structs.json  totk_botw_merged_formats.txt  unused_types.txt
ext_projects/updater/: Cargo.toml
ext_projects/updater/src/: TotkbitsVersion.rs  Updater.rs  lib.rs  main.rs
monaco_react/: .gitignore  package-lock.json  package.json
monaco_react/src/: ActiveTab.jsx  AddFilePrompt.jsx  AddOrRenameFilePrompt.jsx  App.css  App.jsx  ButtonClicks.jsx  Buttons.jsx  DirectoryNode.jsx  DirectoryTree.jsx  MenuBar.jsx  PathList.jsx  RstbTree.jsx  StateManager.jsx  main.jsx  styles.css
monaco_react/src-tauri/: Cargo.toml  tauri.conf.json
monaco_react/src-tauri/icons/: icon.icns
monaco_react/src-tauri/src/: App.rs  Open_and_Save.rs  Settings.rs  TauriCommands.rs  TotkApp.rs  Zstd.rs  main.rs
monaco_react/src-tauri/src/file_format/: BinTextFile.rs  Msbt.rs  Pack.rs  Rstb.rs  TagProduct.rs  mod.rs
monaco_tauri_rust/: .gitignore  Cargo.toml  codicon.min.css  index — kopia.html  index.html  styles.css
monaco_tauri_rust/src/: app.rs  test.yaml
monaco_tauri_rust/src-tauri/: Cargo.toml  tauri.conf.json
monaco_tauri_rust/styles/: main.css
res/: A-4_Static.bcett.byml.zs  A-4_sadasdsaStatic.bcett.byml.zs  Accessory_Battery.pack.zs  Accessory_Battery.root.asb  Accessory_Battery.root.asb.zs  ArmorHead.msbt  Armor_006_Upper.engine__actor__ActorParam.bgyml  Armor_006_Upper.pack.zs  Armor_006_Uppersaveas.pack.zs  Attachment.msbt  Attachment.yaml  Attachment1.msbt  Attachment2.msbt  Attachment2.yml  AutoBuilderDraft.msbt  CUSTOM_Armor_006_Upper.pack.zs  CharaDirectory.msbt  ChemicalBall.Prepare.module.ainb  EUen.Product.120.sarc.zs  Horse.msbt  PouchContent.msbt  PouchContent.yaml  ResourceSizeTable.Product.112.rsizetable.zs  ResourceSizeTable.Product.120.rsizetable.zs  Tag.Product.120.rstbl.byml.zs  Tag.Product.120.rstbl.byml.zs.json  Tag.Product.120.rstbl.yaml  USen.Product.121.sarc.zs  asdf.bgyml  asdf.msbt  asdf.txt  bcett.byml.zsdic  empty_sarc.pack  pack.zsdic  test.yaml  test_working.yaml
res/asdf/: zxcv.pack  zxcv.pack.zs
src/: ActiveTab.jsx  AddOrRenameFilePrompt.jsx  App.css  App.jsx  BinTextFile.rs  ButtonClicks.jsx  ButtonOperations.rs  Buttons.jsx  BymlEntries.rs  BymlFile.rs  CodeEditorFormatter.rs  Comparer.css  Comparer.jsx  DirectoryNode.jsx  DirectoryTree.jsx  FileDropHandler.jsx  FileReader.rs  Gui.rs  GuiMenuBar.rs  GuiScroll.rs  MenuBar.jsx  MonacoEditor.jsx  Open_Save.rs  OptionsEditor.jsx  Pack.rs  RstbTree.jsx  SarcFileLabel.rs  SearchTextInSarc.jsx  Settings.rs  StateManager.jsx  TestCases.rs  TotkConfig.rs  TotkPath.rs  Tree.rs  Zstd.rs  main.jsx  main.rs  misc.rs  styles.css
src-tauri/: .gitignore  Cargo.toml  asb.py  build.rs  pip.txt  tauri.conf.json  test.json  totkbits.py
src-tauri/misc/: DotNetWrapper.cs  asb.py  asb_modded.py  baev.py  ptcl.py
src-tauri/src/: Comparer.rs  Open_and_Save.rs  Settings.rs  Stream.rs  TauriCommands.rs  TotkApp.rs  TotkConfig.rs  Zstd.rs  ainb_rs.py  main.rs  totkbits.py
src-tauri/src/file_format/: Ainb_py.rs  Asb_py.rs  BinTextFile.rs  Esetb.rs  Evfl_cs.rs  Evfl_py.rs  Msbt.rs  Pack.rs  PythonWrapper.rs  Rstb.rs  RstbData.rs  TagProduct.rs  Wrapper.rs  Xlink.rs  mod.rs
src-tauri/src/file_format/SMO/: SmoSaveFile.rs  mod.rs
src/egui_code_editor/src/: lib.rs
src/egui_code_editor/src/syntax/: mod.rs  yaml.rs  yaml_find.rs
src/file_format/: BinTextFile.rs  Pack.rs  TagProduct.rs  mod.rs
src/msyt/: .gitlab-ci.yml  Cargo.toml  README.md  bin.rs  cli.rs  lib.rs  model.rs  subcommand.rs  test.sh  util.rs
src/msyt/botw/: five.rs  four.rs  mod.rs  one.rs  three.rs  two.rs  two_hundred_one.rs  zero.rs
src/msyt/botw/four/: one.rs  three.rs  two.rs  zero.rs
src/msyt/botw/one/: eight.rs  five.rs  four.rs  nine.rs  one.rs  seven.rs  six.rs  ten.rs  three.rs  two.rs  zero.rs
src/msyt/botw/two/: one_field.rs  variable.rs
src/msyt/botw/two_hundred_one/: dynamic.rs  localisation.rs  one_field.rs
src/msyt/botw/zero/: four.rs  one.rs  three.rs  two.rs  zero.rs
src/msyt/src/: cli.rs  converter.rs  lib.rs  main.rs  model.rs  subcommand.rs  util.rs
src/msyt/src/botw/: five.rs  four.rs  mod.rs  one.rs  three.rs  two.rs  two_hundred_one.rs  zero.rs
src/msyt/src/botw/four/: one.rs  three.rs  two.rs  zero.rs
src/msyt/src/botw/one/: eight.rs  five.rs  four.rs  nine.rs  one.rs  seven.rs  six.rs  ten.rs  three.rs  two.rs  zero.rs
src/msyt/src/botw/two/: one_field.rs  variable.rs
src/msyt/src/botw/two_hundred_one/: dynamic.rs  localisation.rs  one_field.rs
src/msyt/src/botw/zero/: four.rs  one.rs  three.rs  two.rs  zero.rs
src/msyt/src/subcommand/: create.rs  export.rs  import.rs
src/msyt/src/util/: lib.rs  option_serde_base64.rs  serde_base64.rs
src/msyt/subcommand/: create.rs  export.rs  import.rs
src/msyt/util/: option_serde_base64.rs  serde_base64.rs
src/ui_elements/: InfoLabel.rs
src/widgets/: TimedNotificationWidget.rs
