[package]
name = "TotkBits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = "0.13"
roead = { version = "0.23.1", features = ["yaml","sarc","byml"] }
serde = "1.0"
serde_json = "1.0"
egui = { default-features = false }
#egui = { path = "W:/coding/egui_modified/crates/egui", default-features = false }
#eframe = { path = "W:/coding/egui_modified/crates/eframe", default-features = true }
#egui_extras = { path = "W:/coding/egui_modified/crates/egui_extras",features = ["default"]  }
#eframe = { default-features = false }
eframe = "0.26.0"
egui_extras = { features = ["default"] }
nfd = "0.0.4" #openfiledialog
rfd = "0.13.0"
native-dialog = "0.7.0"
natord = "1.0.9"
#image = "0.23"
