[package]
name = "TotkBits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msyt = { path = "src/msyt" }
msbt = { git = "https://github.com/jkcclemens/msbt-rs" }
zstd = "0.13"
roead = { version = "0.23.1", features = ["yaml","sarc","byml"] }
#serde = "1.0"
serde_json = "1.0"
egui = { default-features = false }
#egui = { path = "W:/coding/egui_modified/crates/egui", default-features = false }
#eframe = { path = "W:/coding/egui_modified/crates/eframe", default-features = true }
#egui_extras = { path = "W:/coding/egui_modified/crates/egui_extras",features = ["default"]  }
#eframe = { default-features = false }
eframe = "0.26.0"
nfd = "0.0.4" #openfiledialog
rfd = "0.13.0"
native-dialog = "0.7.0"
natord = "1.0.9"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
bitvec = "1.0.1"
rayon = "1"
serde = "1"
serde_derive = "1"
serde_yaml = "0.8"
walkdir = "2"
base64 = "0.10"
byteordered = "0.4"
clap = "2"
failure = "0.1"
indexmap = { version = "1", features = ["serde", "serde-1"] }
anyhow = "1"
egui_code_editor = { path = "src/egui_code_editor" , default-features = true }
colorful = "0.2.2"
sha2 = "0.10"
digest = "0.10"

