[package]
name = "TotkBits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msyt = { git = "https://github.com/SolidLink95/msyt-lib" }
msbt = { git = "https://github.com/lojewalo/msbt-rs" }
zstd = "0.13"
roead = { version = "0.23.1", features = ["yaml","sarc","byml"] }
serde_json = "1.0"
egui = { default-features = false }
#eframe = { default-features = false }
eframe = "0.26.0"
rfd = "0.14.0"
native-dialog = "0.7.0"
natord = "1.0.9"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
bitvec = "1.0.1"
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
#serde_derive = "1"
serde_yaml = "0.9.32"
walkdir = "2"
byteordered = "0.6.0"
egui_code_editor = { path = "src/egui_code_editor" , default-features = true }
sha2 = "0.10"
digest = "0.10"
fs2 = "0.4"
