[package]
name = "Totkbits"
version = "0.0.5"
description = "A Tauri App"
authors = ["Banan039/SolidLink95"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
msbt_bindings_rs = {git = "https://github.com/SolidLink95/msbt_bindings_rs"}
# msbt_bindings_rs = {path = "W:/coding/msbt_bindings_rs"}
tauri = { version = "1", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
# tauri-bundler = "1.5.1"
msyt = { git = "https://github.com/SolidLink95/msyt-lib" }
msbt = { git = "https://github.com/lojewalo/msbt-rs" }
zstd = "0.13"
roead = { version = "0.25.1", features = ["yaml", "sarc", "byml"] }
serde_json = "1.0"
rfd = "0.14.0"
native-dialog = "0.7.0"
natord = "1.0.9"
bitvec = "1.0.1"
# rayon = "1"
#serde_derive = "1" 
serde_yaml = "0.9.32"
walkdir = "2"
byteordered = "0.6.0"
sha2 = "0.10"
digest = "0.10"
fs2 = "0.4"
base64 = "0.21.7"
restbl = { version = "0.1", features = ["yaml"] }
flate2 = "1.0.22"
zstud-sys = {git = "https://github.com/SolidLink95/zstud-sys-rs"}
windows = "0.56.0"
toml = "0.8.12"

[dev-dependencies]
windows = "0.56.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# yaml = ["serde_yaml"]
